--- a/firebase.json
+++ b/firebase.json
@@ -146,7 +146,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; connect-src 'self' https://*.firebasedatabase.app https://*.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://accounts.google.com wss://*.firebasedatabase.app; script-src 'self' https://www.gstatic.com/firebasejs/ https://*.firebasedatabase.app https://cdnjs.cloudflare.com/ajax/libs/; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob: https://*.googleusercontent.com https://lh3.googleusercontent.com; font-src 'self' https://fonts.gstatic.com data:; frame-src https://accounts.google.com https://*.firebaseapp.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'; worker-src 'self' blob:; manifest-src 'self'; media-src 'self'"
+            "value": "default-src 'self'; connect-src 'self' https://*.firebasedatabase.app https://*.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://accounts.google.com wss://*.firebasedatabase.app; script-src 'self' https://www.gstatic.com/firebasejs/ https://*.firebasedatabase.app https://cdnjs.cloudflare.com/ajax/libs/; style-src 'self' https://fonts.googleapis.com; img-src 'self' data: blob: https://*.googleusercontent.com https://lh3.googleusercontent.com; font-src 'self' https://fonts.gstatic.com data:; frame-src https://accounts.google.com https://*.firebaseapp.com https://*.firebasedatabase.app; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'; worker-src 'self' blob:; manifest-src 'self'; media-src 'self'"
           }
         ]
       }
@@ -207,8 +207,5 @@
         ".env*"
       ]
     }
-  ],
-  "storage": {
-    "rules": "storage.rules"
-  }
+  ]
 }
