--- a/firebase.json
+++ b/firebase.json
@@ -18,7 +18,15 @@
       "**/*.iml",
       "**/functions/**",
       "**/_*",
-      "**/package*.json"
+      "**/package*.json",
+      "**/.DS_Store",
+      "**/Thumbs.db",
+      "**/.vscode/**",
+      "**/.git/**",
+      "**/.github/**",
+      "**/backup_*",
+      "**/OPTIMIZATION_*.md",
+      "**/EXECUTIVE_SUMMARY.md"
     ],
     "rewrites": [
       {
@@ -28,6 +36,14 @@
       {
         "source": "/imprint",
         "destination": "/imprint.html"
+      },
+      {
+        "source": "/impressum",
+        "destination": "/imprint.html"
+      },
+      {
+        "source": "/datenschutz",
+        "destination": "/privacy.html"
       },
       {
         "source": "/404",
@@ -146,7 +162,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; connect-src 'self' https://*.firebasedatabase.app https://*.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://accounts.google.com wss://*.firebasedatabase.app; script-src 'self' https://www.gstatic.com/firebasejs/ https://*.firebasedatabase.app https://cdnjs.cloudflare.com/ajax/libs/; style-src 'self' https://fonts.googleapis.com; img-src 'self' data: blob: https://*.googleusercontent.com https://lh3.googleusercontent.com; font-src 'self' https://fonts.gstatic.com data:; frame-src https://accounts.google.com https://*.firebaseapp.com https://*.firebasedatabase.app; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'; worker-src 'self' blob:; manifest-src 'self'; media-src 'self'"
+            "value": "default-src 'self'; connect-src 'self' https://*.firebasedatabase.app https://*.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://accounts.google.com https://api.stripe.com https://*.stripe.com wss://*.firebasedatabase.app; script-src 'self' https://www.gstatic.com/firebasejs/ https://*.firebasedatabase.app https://cdn.jsdelivr.net/npm/dompurify@ https://js.stripe.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; img-src 'self' data: blob: https://*.googleusercontent.com https://lh3.googleusercontent.com https://*.stripe.com; font-src 'self' https://fonts.gstatic.com data:; frame-src https://accounts.google.com https://*.firebaseapp.com https://*.firebasedatabase.app https://js.stripe.com https://hooks.stripe.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self' https://*.stripe.com; object-src 'none'; worker-src 'self' blob:; manifest-src 'self'; media-src 'self'"
           }
         ]
       }
