--- a/firebase.json
+++ b/firebase.json
@@ -52,6 +52,19 @@
     ],
     "headers": [
       {
+        "source": "/assets/js/firebase-credentials.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-store"
+          },
+          {
+            "key": "Content-Type",
+            "value": "text/javascript; charset=utf-8"
+          }
+        ]
+      },
+      {
         "source": "**/*.@(js|mjs)",
         "headers": [
           {
@@ -155,14 +168,6 @@
           {
             "key": "Cross-Origin-Resource-Policy",
             "value": "same-origin"
-          },
-          {
-            "key": "Cross-Origin-Embedder-Policy",
-            "value": "credentialless"
-          },
-          {
-            "key": "Content-Security-Policy",
-            "value": "default-src 'self'; connect-src 'self' https://*.firebasedatabase.app https://*.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://accounts.google.com https://api.stripe.com https://*.stripe.com wss://*.firebasedatabase.app; script-src 'self' https://www.gstatic.com/firebasejs/ https://*.firebasedatabase.app https://cdn.jsdelivr.net/npm/dompurify@ https://js.stripe.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; img-src 'self' data: blob: https://*.googleusercontent.com https://lh3.googleusercontent.com https://*.stripe.com; font-src 'self' https://fonts.gstatic.com data:; frame-src https://accounts.google.com https://*.firebaseapp.com https://*.firebasedatabase.app https://js.stripe.com https://hooks.stripe.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self' https://*.stripe.com; object-src 'none'; worker-src 'self' blob:; manifest-src 'self'; media-src 'self'"
           }
         ]
       }
