Refactor showNotification function to simplify message handling

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "denkstduwebsite"
+    "default": "denkstduwebsite",
+    "prod": "denkstduwebsite",
+    "staging": "denkstduwebsite-staging"
   }
 }
