--- a/firebase.json
+++ b/firebase.json
@@ -273,15 +273,13 @@
     {
       "source": "functions",
       "codebase": "default",
-      "disallowLegacyRuntimeConfig": true,
       "runtime": "nodejs20",
       "ignore": [
         "node_modules",
         ".git",
         "firebase-debug.log",
         "firebase-debug.*.log",
-        "*.local",
-        ".env*"
+        "*.local"
       ]
     }
   ]
