Enhance security by adding domain whitelist public key and private key exclusions; implement real-time security functions for game updates and violations; improve event listener management in multiplayer gameplay

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+# Private keys - DO NOT COMMIT
+build-scripts/private.pem
+build-scripts/*.key
