--- a/functions/package.json
+++ b/functions/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.3",
     "firebase-functions-test": "^3.1.0",
     "mocha": "^10.2.0",
+    "proxyquire": "^2.1.3",
     "sinon": "^17.0.1"
   },
   "private": true
