--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -9,22 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # ✅ Node Setup ohne automatisches Caching
       - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # ✅ Manuelles Caching für Root Dependencies
-      - name: Cache Root Dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      # ✅ Manuelles Caching für Functions Dependencies
       - name: Cache Functions Dependencies
         uses: actions/cache@v3
         with:
@@ -36,14 +25,14 @@ jobs:
       - name: Verify Functions Setup
         run: test -f functions/package-lock.json
 
-      - name: Install Root Dependencies
-        run: npm ci && npm run build
-
+      # ✅ KEIN Root npm ci mehr
       - name: Install Functions Dependencies
-        run: cd functions && npm ci
+        working-directory: ./functions
+        run: npm ci
 
       - name: Run Functions Tests
-        run: npm test --prefix functions
+        working-directory: ./functions
+        run: npm test
 
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
@@ -53,10 +42,9 @@ jobs:
           channelId: live
           projectId: denkstduweb
 
-      - name: Install Firebase Tools
-        run: npm install -g firebase-tools
-
       - name: Deploy Functions
-        run: firebase deploy --only functions --token "$FIREBASE_TOKEN"
+        run: |
+          npm install -g firebase-tools
+          firebase deploy --only functions --token "$FIREBASE_TOKEN"
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
