--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -1,10 +1,10 @@
-name: Deploy to Firebase Hosting on merge
+name: Deploy to Firebase
 'on':
   push:
     branches:
       - main
 jobs:
-  build_and_deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,18 +14,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Cache Functions Dependencies
-        uses: actions/cache@v3
-        with:
-          path: functions/node_modules
-          key: ${{ runner.os }}-functions-${{ hashFiles('functions/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-functions-
+      - name: Install Root Dependencies
+        run: npm ci
 
-      - name: Verify Functions Setup
-        run: test -f functions/package-lock.json
-
-      # ✅ KEIN Root npm ci mehr
       - name: Install Functions Dependencies
         working-directory: ./functions
         run: npm ci
@@ -34,17 +25,9 @@ jobs:
         working-directory: ./functions
         run: npm test
 
-      - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DENKSTDUWEB }}'
-          channelId: live
-          projectId: denkstduweb
-
-      - name: Deploy Functions
+      - name: Deploy to Firebase (Hosting + Functions)
         run: |
           npm install -g firebase-tools
-          firebase deploy --only functions --token "$FIREBASE_TOKEN"
+          firebase deploy --token "$FIREBASE_TOKEN"
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
