--- a/public/firebase.json
+++ b/public/firebase.json
@@ -264,10 +264,7 @@
         "type": 301
       }
     ],
-    "appAssociation": "AUTO",
-    "i18n": {
-      "root": "/"
-    }
+    "appAssociation": "AUTO"
   },
   "database": {
     "rules": "database.rules.json"
