--- a/firebase.json
+++ b/firebase.json
@@ -44,6 +44,14 @@
         "destination": "/privacy.html"
       },
       {
+        "source": "/settings",
+        "destination": "/settings.html"
+      },
+      {
+        "source": "/results",
+        "destination": "/results.html"
+      },
+      {
         "source": "/404",
         "destination": "/404.html"
       },
@@ -89,7 +97,7 @@
       },
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/404.html"
       }
     ],
     "headers": [
@@ -105,7 +113,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "no-store"
+            "value": "no-store, no-cache, must-revalidate"
           },
           {
             "key": "Content-Type",
@@ -115,27 +123,45 @@
       },
       {
         "source": "/assets/js/firebase-config.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate" }
+        ]
       },
       {
         "source": "/assets/js/firebase-auth.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate" }
+        ]
       },
       {
         "source": "/assets/js/firebase-service.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate" }
+        ]
       },
       {
         "source": "/assets/js/utils.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate" }
+        ]
       },
       {
         "source": "/assets/js/index.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate" }
+        ]
       },
       {
         "source": "/assets/js/settings.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate" }
+        ]
+      },
+      {
+        "source": "/assets/js/GameState.js",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate" }
+        ]
       },
       {
         "source": "**/*.@(js|mjs)",
@@ -199,7 +225,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "no-cache, no-store, must-revalidate"
+            "value": "public, max-age=60, must-revalidate"
           },
           {
             "key": "Content-Type",
@@ -207,7 +233,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' https://www.gstatic.com https://apis.google.com https://firebase.googleapis.com https://www.google.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; connect-src 'self' https://firebasestorage.googleapis.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://www.googleapis.com https://europe-west1-denkstduwebsite.cloudfunctions.net wss://*.firebaseio.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com data:; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'; upgrade-insecure-requests"
+            "value": "default-src 'self'; script-src 'self' https://www.gstatic.com https://apis.google.com https://firebase.googleapis.com https://www.google.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; connect-src 'self' https://firebasestorage.googleapis.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://www.googleapis.com https://europe-west1-denkstduwebsite.cloudfunctions.net wss://*.firebaseio.com https://*.firebaseapp.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com data:; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; object-src 'none'; upgrade-insecure-requests"
           },
           {
             "key": "Set-Cookie",
@@ -236,7 +262,7 @@
           },
           {
             "key": "Referrer-Policy",
-            "value": "no-referrer"
+            "value": "strict-origin-when-cross-origin"
           },
           {
             "key": "Permissions-Policy",
@@ -259,6 +285,7 @@
     ],
     "cleanUrls": true,
     "trailingSlash": false,
+    "compress": true,
     "redirects": [
       {
         "source": "/denkstdu",
